[package]
name = "prisoners_switches"
version = "0.1.0"
description = "A test for a specific prisoners dilemna problem"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["puzzle","prisoner","dilemna","test"]
license = "MIT"
repository = "https://github.com/storyfeet/prisoners_switches"

[dependencies]
rand = "0.5.5"
